OPTIMIZACION DE DISEÑOS Y PROCESOS NO.11

--- a/ProyectoPooDist/src/ControlCliente/FrameHistorialClientes.form
+++ b/ProyectoPooDist/src/ControlCliente/FrameHistorialClientes.form
@@ -76,7 +76,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" pref="357" max="-2" attributes="0"/>
-                      <EmptySpace pref="401" max="32767" attributes="0"/>
+                      <EmptySpace pref="385" max="32767" attributes="0"/>
                       <Component id="jPanel3" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -138,7 +138,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Segoe UI" size="12" style="1"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Activar Cliente"/>
+                    <Property name="text" type="java.lang.String" value="ACTIVAR CLIENTE"/>
                   </Properties>
                 </Component>
               </SubComponents>
