--- a/ProyectoPooDist/src/GestionDeCamiones/CAMIONESINACTIVOS.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/CAMIONESINACTIVOS.form
@@ -54,7 +54,7 @@
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="jLabel4" min="-2" pref="63" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="txtMarcaCamionBuscar1" min="-2" pref="234" max="-2" attributes="0"/>
+                          <Component id="txtMarcaCamionBuscar" min="-2" pref="234" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="buscarCamion" min="-2" pref="95" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
@@ -78,7 +78,7 @@
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="txtMarcaCamionBuscar1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtMarcaCamionBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="ActivarCamionEliminado" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                       <Component id="buscarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
@@ -121,7 +121,7 @@
             <Property name="text" type="java.lang.String" value="MARCA"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtMarcaCamionBuscar1">
+        <Component class="javax.swing.JTextField" name="txtMarcaCamionBuscar">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Nirmala UI" size="12" style="0"/>
