--- a/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
+++ b/ProyectoPooDist/src/GestionDeCamiones/INICIOGESTIONCAMIONES.form
@@ -108,7 +108,7 @@
                                   <Group type="102" attributes="0">
                                       <Component id="jLabel4" min="-2" pref="63" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="txtMarcaCamionBuscar1" min="-2" pref="234" max="-2" attributes="0"/>
+                                      <Component id="txtMarcaCamionBuscar" min="-2" pref="234" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                       <Group type="102" alignment="1" attributes="0">
@@ -136,7 +136,7 @@
                           </Group>
                           <EmptySpace pref="88" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="txtMarcaCamionBuscar1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtMarcaCamionBuscar" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="garageCamiones" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                               <Component id="editarCamion" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
@@ -184,7 +184,7 @@
                     <Property name="text" type="java.lang.String" value="MARCA"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JTextField" name="txtMarcaCamionBuscar1">
+                <Component class="javax.swing.JTextField" name="txtMarcaCamionBuscar">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Nirmala UI" size="12" style="0"/>
