--- a/ProyectoPooDist/src/GestionDeUsuarios/AGREGARGESTIONUSUARIOS.form
+++ b/ProyectoPooDist/src/GestionDeUsuarios/AGREGARGESTIONUSUARIOS.form
@@ -423,6 +423,11 @@
               </AuxValues>
             </Component>
             <Component class="javax.swing.JPasswordField" name="txtContrase&#xf1;aUsuario">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Nirmala UI" size="12" style="0"/>
+                </Property>
+              </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="btnMostrarContrase&#xf1;a">
               <Properties>
